tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_81.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (x # ((- 1) * 2));
               z := 0;
               z := (+ 1223);
               x := (- x);
               p := q;
               z := 1223;
               q := (~ (1 > ((y - 1) * (y + 200))));
               q := (200 <= 0);
  (* error *)  x := (+ (1223 DIV (2 + y)));
               q := q
END Test19.